# implicants

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: .gitignore  from_rust.rs  from_rust_collect.rs  print.c  print.rs
include/: implicants.h
src/: bits.rs  c.rs  lib.rs  masked_count.rs
tests/: collect.rs  collect2.rs  print.rs
