[package]
name = "implicants"
version = "1.0.0"
authors = ["Ben Wiederhake <BenWiederhake.GitHub@gmx.de>"]
description = "Enumerate (prime) implicants of an arbitrary function"
repository = "https://github.com/BenWiederhake/implicants"
readme = "README.md"
license = "GPL-3.0"
#license-file = "LICENSE"

[dependencies]
# Used for the storage of the 3^n bits
fixedbitset = "0.1.5"
subint = { git = "https://github.com/BenWiederhake/subint.git" }
libc = { version = "0.2.21", optional = true }

[features]
default = [ "c-abi" ]
c-abi = [ "libc" ]

[lib]
crate-type = ["staticlib", "rlib"]
